Animate between scales, in a quite convoluted way

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Gif Wallpaper</string>
 
     <string name="open_gif">Open Gif</string>
+    <string name="change_scale">Change scale</string>
 </resources>
