Add a rotation button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="clear_gif">Clear gif</string>
     <string name="click_the_open_gif_button">Click the Open GIF button</string>
     <string name="loading">Loading…</string>
+    <string name="rotate">Rotate</string>
 </resources>
