--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="change_scale">Change scale</string>
     <string name="clear_gif">Clear GIF</string>
     <string name="click_the_open_gif_button">Click the Open GIF button</string>
+    <string name="error_wallpaper_chooser">
+        Couldn\'t launch wallpaper chooser. You can still activate
+        the GIF Live Wallpaper by choosing \'Live Wallpapers\'
+        in your home screen wallpaper picker.</string>
     <string name="loading">Loading…</string>
     <string name="open_app">Open the %s app and setup your favorite GIF to get started</string>
     <string name="open_gif">Open GIF</string>
