Update strings.xml (POEditor.com)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about">About</string>
-    <string name="activate">Activate</string>
-    <string name="app_name">GIF Live Wallpaper</string>
-    <string name="change_color">Change color</string>
-    <string name="change_scale">Change scale</string>
-    <string name="clear_gif">Clear GIF</string>
-    <string name="click_the_open_gif_button">Click the \"Open GIF\" button.</string>
-    <string name="error_wallpaper_chooser">
-        Couldn\'t launch wallpaper chooser. You can still activate
-        the GIF Live Wallpaper by choosing \'Live Wallpapers\'
-        in your home screen wallpaper picker.</string>
-    <string name="loading">Loading…</string>
-    <string name="open_app">Open the GIF Live Wallpaper app and setup your favorite GIF to get started.</string>
-    <string name="open_gif">Open GIF</string>
-    <string name="pick_a_color">Pick a color</string>
-    <string name="privacy">Privacy</string>
-    <string name="rotate">Rotate</string>
+    <string name="about">"About"</string>
+    <string name="activate">"Activate"</string>
+    <string name="app_name">"GIF Live Wallpaper"</string>
+    <string name="change_color">"Change color"</string>
+    <string name="change_scale">"Change scale"</string>
+    <string name="clear_gif">"Clear GIF"</string>
+    <string name="click_the_open_gif_button">"Click the \"Open GIF\" button."</string>
+    <string name="error_wallpaper_chooser">"
+        Couldn't launch wallpaper chooser. You can still activate
+        the GIF Live Wallpaper by choosing 'Live Wallpapers'
+        in your home screen wallpaper picker."</string>
+    <string name="loading">"Loading…"</string>
+    <string name="open_app">"Open the GIF Live Wallpaper app and setup your favorite GIF to get started."</string>
+    <string name="open_gif">"Open GIF"</string>
+    <string name="pick_a_color">"Pick a color"</string>
+    <string name="privacy">"Privacy"</string>
+    <string name="rotate">"Rotate"</string>
 </resources>
