--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="about">"Acerca de"</string>
     <string name="activate">"Activar"</string>
     <string name="app_name">"GIF Live Wallpaper"</string>
+    <string name="battery_saver">"Ahorro de batería"</string>
     <string name="change_color">"Cambiar color"</string>
     <string name="change_scale">"Cambiar escala"</string>
     <string name="clear_gif">"Quitar GIF"</string>
@@ -11,7 +12,9 @@
     <string name="loading">"Cargando..."</string>
     <string name="open_app">"Abre la app de GIF Live Wallpaper y selecciona tu GIF favorito para comenzar."</string>
     <string name="open_gif">"Abrir GIF"</string>
+    <string name="pause_blayback_battery_saver">"Pausar reproducción cuando el modo Ahorro de Batería esté activado"</string>
     <string name="pick_a_color">"Selecciona un color"</string>
     <string name="privacy">"Privacidad"</string>
     <string name="rotate">"Rotar"</string>
+    <string name="settings">"Ajustes"</string>
 </resources>
