--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about">"Acerca de"</string>
-    <string name="activate">"Activar"</string>
-    <string name="app_name">"GIF Live Wallpaper"</string>
-    <string name="battery_saver">"Ahorro de batería"</string>
-    <string name="change_color">"Cambiar color"</string>
-    <string name="change_scale">"Cambiar escala"</string>
-    <string name="clear_gif">"Quitar GIF"</string>
-    <string name="click_the_open_gif_button">"Haz clic en el  botón de \"Abrir GIF\"."</string>
-    <string name="error_wallpaper_chooser">"No se pudo iniciar el seleccionador de wallpapers. Todavía puedes activar GIF Live Wallpaper escogiendo 'Live Wallpapers' en el seleccionador de wallpapers de tu pantalla principal."</string>
-    <string name="loading">"Cargando..."</string>
-    <string name="open_app">"Abre la app de GIF Live Wallpaper y selecciona tu GIF favorito para comenzar."</string>
-    <string name="open_gif">"Abrir GIF"</string>
-    <string name="pause_blayback_battery_saver">"Pausar reproducción cuando el modo Ahorro de Batería esté activado"</string>
-    <string name="pick_a_color">"Selecciona un color"</string>
-    <string name="privacy">"Privacidad"</string>
-    <string name="rotate">"Rotar"</string>
-    <string name="settings">"Ajustes"</string>
+  <string name="about">"Acerca de"</string>
+  <string name="activate">"Activar"</string>
+  <string name="app_name">"GIF Live Wallpaper"</string>
+  <string name="battery_saver">"Ahorro de batería"</string>
+  <string name="change_color">"Cambiar color"</string>
+  <string name="change_scale">"Cambiar escala"</string>
+  <string name="clear_gif">"Quitar GIF"</string>
+  <string name="click_the_open_gif_button">"Haz clic en el  botón de \"Abrir GIF\"."</string>
+  <string name="error_wallpaper_chooser">"No se pudo iniciar el seleccionador de wallpapers. Todavía puedes activar GIF Live Wallpaper escogiendo 'Live Wallpapers' en el seleccionador de wallpapers de tu pantalla principal."</string>
+  <string name="loading">"Cargando…"</string>
+  <string name="open_app">"Abre la app de GIF Live Wallpaper y selecciona tu GIF favorito para comenzar."</string>
+  <string name="open_gif">"Abrir GIF"</string>
+  <string name="pause_blayback_battery_saver">"Pausar reproducción cuando el modo Ahorro de Batería esté activado"</string>
+  <string name="pick_a_color">"Selecciona un color"</string>
+  <string name="privacy">"Privacidad"</string>
+  <string name="rotate">"Rotar"</string>
+  <string name="settings">"Ajustes"</string>
 </resources>
