--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
   <string name="privacy">"Privacy"</string>
   <string name="rotate">"Rotate"</string>
   <string name="settings">"Settings"</string>
+  <string name="thermal_throttle">Thermal Throttle</string>
+  <string name="pause_playback_running_hot">Pause GIF when the phone is running hot.</string>
 </resources>
