--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,11 +14,11 @@
   <string name="loading">"Loading…"</string>
   <string name="open_app">"Open the GIF Live Wallpaper app and setup your favorite GIF to get started."</string>
   <string name="open_gif">"Open GIF"</string>
-  <string name="pause_blayback_battery_saver">"Pause GIF when Battery Saver is enabled"</string>
+  <string name="pause_blayback_battery_saver">"Pause GIF when Battery Saver is enabled."</string>
+  <string name="pause_playback_running_hot">"Pause GIF when the phone is running hot."</string>
   <string name="pick_a_color">"Pick a color"</string>
   <string name="privacy">"Privacy"</string>
   <string name="rotate">"Rotate"</string>
   <string name="settings">"Settings"</string>
-  <string name="thermal_throttle">Thermal Throttle</string>
-  <string name="pause_playback_running_hot">Pause GIF when the phone is running hot.</string>
+  <string name="thermal_throttle">"Thermal Mitigation"</string>
 </resources>
