--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,5 +18,5 @@
   <string name="privacy">"Конфиденциальность"</string>
   <string name="rotate">"Вращать"</string>
   <string name="settings">"Настройки"</string>
-  <string name="thermal_throttle">"Тепловое смягчение"</string>
+  <string name="thermal_throttle">"Защита от перегрева"</string>
 </resources>
