--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,11 +3,13 @@
   <string name="about">"A propos"</string>
   <string name="activate">"Activer"</string>
   <string name="app_name">"GIF Live Wallpaper"</string>
+  <string name="back">"Retour"</string>
   <string name="battery_saver">"Économiseur de batterie"</string>
   <string name="change_color">"Couleur"</string>
   <string name="change_scale">"Ratio"</string>
   <string name="clear_gif">"Supprimer le GIF"</string>
   <string name="click_the_open_gif_button">"Clickez sur le boutton \"Choisir un GIF\"."</string>
+  <string name="close">"Fermer"</string>
   <string name="error_wallpaper_chooser">"Impossible de lancer le menu des fonds d'écrans.
         Pour activer le \"GIF Live Wallpaper\", sélectionnez le directement
         depuis votre écran d'accueil."</string>
