--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,11 +3,13 @@
   <string name="about">"Info"</string>
   <string name="activate">"Attiva"</string>
   <string name="app_name">"GIF Live Wallpaper"</string>
+  <string name="back">"Indietro"</string>
   <string name="battery_saver">"Risparmio energetico"</string>
   <string name="change_color">"Cambia il colore"</string>
   <string name="change_scale">"Ridimensiona"</string>
   <string name="clear_gif">"Cancella GIF"</string>
   <string name="click_the_open_gif_button">"\"Scegli GIF\""</string>
+  <string name="close">"Chiudi"</string>
   <string name="error_wallpaper_chooser">"Impossibile avviare il selettore di sfondi. Puoi comunque attivare 
 il tuo sfondo animato scegliendo 'Live Wallpapers' 
 nel selettore di sfondi del tuo launcher."</string>
