--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,11 +3,13 @@
   <string name="about">"О приложении"</string>
   <string name="activate">"Активировать"</string>
   <string name="app_name">"GIF Живые Обои"</string>
+  <string name="back">"Назад"</string>
   <string name="battery_saver">"Режим энергосбережения"</string>
   <string name="change_color">"Сменить цвет"</string>
   <string name="change_scale">"Масштаб"</string>
   <string name="clear_gif">"Очистить GIF"</string>
   <string name="click_the_open_gif_button">"Нажмите кнопку Открыть GIF"</string>
+  <string name="close">"Закрыть"</string>
   <string name="error_wallpaper_chooser">"Невозможно запустить \"Выбор обоев\". Вы должны активировать GIF Live Wallpaper через меню \"Живые обои\"."</string>
   <string name="loading">"Загрузка…"</string>
   <string name="open_app">"Откройте приложение"</string>
